Fix: 인기 게시판 집계와 검색 결과 번호 정합성 수정